# gencinema

./: README.md  pyproject.toml
src/api/v1/: urls.py
src/api/v1/movies/: serializers.py  views.py
src/apps/movies/: models.py  serializers.py  urls.py
src/apps/movies/migrations/: 0001_initial.py  0002_movie_status.py
src/config/: settings.py  urls.py
src/movies/: admin.py  models.py  serializers.py  urls.py  views.py
src/utils/: test_data.json
