[tool.poetry]
name = "gencinema"
version = "0.1.0"
description = ""
authors = ["D4CHub <akbievalim0578@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.7"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
